[gd_scene load_steps=17 format=3 uid="uid://djb8xjnp17sc4"]

[ext_resource type="Script" path="res://Enemies/jumper.gd" id="1_pbsx8"]
[ext_resource type="Texture2D" uid="uid://rf1xnol6qqod" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-1.png" id="2_8kwux"]
[ext_resource type="Texture2D" uid="uid://dovfkd5eas88o" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-2.png" id="3_nfgwe"]
[ext_resource type="Texture2D" uid="uid://dr5u2d1u5043r" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-3.png" id="4_lgurv"]
[ext_resource type="Texture2D" uid="uid://3hxlwominekn" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-4.png" id="5_x5pnp"]
[ext_resource type="Texture2D" uid="uid://b7df86m2c4i3" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-5.png" id="6_l10sb"]
[ext_resource type="Texture2D" uid="uid://cyr1i5vj3fqa4" path="res://Assets/Sprite Sheets/enemies/jumper-idle/jumper-idle-1.png" id="7_lhiwm"]
[ext_resource type="Texture2D" uid="uid://dxeu0efbkydvk" path="res://Assets/Sprite Sheets/enemies/jumper-idle/jumper-idle-2.png" id="8_72w6d"]
[ext_resource type="Texture2D" uid="uid://hqil457foso4" path="res://Assets/Sprite Sheets/enemies/jumper-idle/jumper-idle-3.png" id="9_1te1i"]
[ext_resource type="Texture2D" uid="uid://lii3bf4pkyf3" path="res://Assets/Sprite Sheets/enemies/jumper-idle/jumper-idle-4.png" id="10_7phy3"]
[ext_resource type="Texture2D" uid="uid://c57yfetv4vjer" path="res://Assets/Sprite Sheets/enemies/jumper-jump/jumper-jump.png" id="11_ar8bq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76lk6"]
radius = 6.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tl6ye"]
radius = 139.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oc5ls"]
radius = 7.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dug1g"]
size = Vector2(28, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_meok1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8kwux")
}, {
"duration": 1.0,
"texture": ExtResource("3_nfgwe")
}, {
"duration": 1.0,
"texture": ExtResource("4_lgurv")
}, {
"duration": 1.0,
"texture": ExtResource("5_x5pnp")
}, {
"duration": 1.0,
"texture": ExtResource("6_l10sb")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_lhiwm")
}, {
"duration": 1.0,
"texture": ExtResource("8_72w6d")
}, {
"duration": 1.0,
"texture": ExtResource("9_1te1i")
}, {
"duration": 1.0,
"texture": ExtResource("10_7phy3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ar8bq")
}],
"loop": true,
"name": &"Move",
"speed": 3.0
}]

[node name="Jumper" type="CharacterBody2D"]
script = ExtResource("1_pbsx8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_76lk6")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_tl6ye")
metadata/_edit_lock_ = true

[node name="DamageHitbox" type="Area2D" parent="."]
visible = false

[node name="Hitbox" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oc5ls")

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="Attack" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_dug1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_meok1")
animation = &"Move"
autoplay = "Idle"
frame_progress = 0.460415
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
